...
    @IBAction func openDucmentation(_ sender: Any) {
        let storyboard = UIStoryboard(name: "Documentation", bundle: nil)
        let vc = storyboard.instantiateInitialViewController()!
        self.navigationController?.present(vc, animated: true, completion: nil)
    }
    @IBAction func openBehaviours(_ sender: Any) {
        let storyboard = UIStoryboard(name: "Projects", bundle: nil)
        let vc = storyboard.instantiateViewController(withIdentifier: "pluginsVC")
        vc.modalPresentationStyle = .formSheet
        self.navigationController?.present(vc, animated: true, completion: nil)
    }
    
    override func collectionView(_ collectionView: UICollectionView, didSelectItemAt indexPath: IndexPath) {
...
                }
            }))
            alert.addAction(UIAlertAction(title: "Delete '\(cell.name.text!)'", style: UIAlertAction.Style.destructive) { result in
                CreateProject().deleteProject(name: cell.name.text!)
                self.collectionView.reloadData()
            })
            alert.addAction(UIAlertAction(title: "Cancel", style: UIAlertAction.Style.cancel, handler: nil))
            if let pop = alert.popoverPresentationController {
                pop.sourceView = cell.contentView
                pop.sourceRect = CGRect(x: cell.contentView.bounds.midX, y: cell.contentView.bounds.midY, width: 0, height: 0)
            }
            // show the alert + make impact
            impactFeedbackgenerator.impactOccurred()
...
    var bulletinManager: BLTNItemManager!
    
    func bulletin(goto: Int = 0) -> BLTNItemManager {
        let page = BLTNPageItem(title: "New Project")
        page.image = #imageLiteral(resourceName: "Repo")
        page.descriptionText = "Create a new project in StudIO using the 2 following methods:"
        page.actionButtonTitle = "Clone repository"
        page.alternativeButtonTitle = "Start a local repository"
        
        page.actionHandler = { (item: BLTNActionItem) in
            var clone = TextFieldBulletinPage(title: "Clone")
            clone = self.clone(clone) as! TextFieldBulletinPage
            page.next = clone
            item.manager?.displayNextItem()
            
        }
        var new: BLTNPageItem {
            let new = TextFieldBulletinPage(title: "Local project")
            new.descriptionText = "Create a local git project that will not be backed up by any git hosting platform."
            new.actionButtonTitle = "Done"
            new.checkURL = false
            new.placeholder = "Project name"
            var name = ""
            new.textInputHandler = { item, text in
                name = text!
            }
...
